# Exercism-Solutions

./: .gitignore  .phpunit.result.cache
bash/error-handling/: error_handling.sh  error_handling_test.sh
bash/hello-world/: hello_world.sh
bash/leap/: leap.sh
bash/raindrops/: raindrops.sh
bash/two-fer/: two_fer.sh
c/acronym/: tests.out
c/all-your-base/: README.md  makefile  memcheck.out  tests.out
c/binary/: memcheck.out
c/difference-of-squares/: CMakeLists.txt
c/difference-of-squares/.exercism/: metadata.json
c/difference-of-squares/src/: difference_of_squares.c
c/grains/: memcheck.out  tests.out
c/hamming/: makefile  tests.out
c/isogram/: memcheck.out  tests.out
c/largest-series-product/: tests.out
c/nucleotide-count/: README.md  makefile  tests 2.out  tests.out
c/pangram/: CMakeLists.txt  memcheck.out
c/resistor-color/: .clang-format  local_history.patch  makefile  tests.out
c/rna-transcription/: makefile  tests.out
c/square-root/: tests.out
c/word-count/: makefile
cpp/: LICENSE  README.md  README.md.tmp.html
cpp/acronym/: acronym.cpp  acronym.h  acronym_test.cpp
cpp/all-your-base/: all_your_base.cpp  all_your_base.h  all_your_base_test.cpp
cpp/allergies/: allergies.cpp  allergies.h
cpp/anagram/: anagram.h
cpp/armstrong-numbers/: CMakeLists.txt  armstrong_numbers.cpp  armstrong_numbers.h  armstrong_numbers_test.cpp  vt_trying_to_constexpr_all_the_things.hpp
cpp/atbash-cipher/: .clang-format  atbash_cipher.cpp  atbash_cipher.h  atbash_cipher_test.cpp
cpp/beer-song/: beer_song.cpp  beer_song.h
cpp/binary/: binary.h  binary_test.cpp
cpp/binary-search/: binary_search.cpp  binary_search.h  formated.cpp
cpp/binary-search-tree/: binary_search_tree.cpp  binary_search_tree.h  binary_search_tree_test.cpp
cpp/bob/: bob  bob.cpp  bob.h
cpp/bracket-push/: bracket_push.h  bracket_push_test.cpp
cpp/circular-buffer/: CMakeLists.txt  circular_buffer.h
cpp/clock/: clock.h  clock_test.cpp
cpp/etl/: etl.cpp  (+1 more)
cpp/hexadecimal/: CMakeLists.txt  hexadecimal.cpp  hexadecimal.hpp  hexadecimal_test.cpp
cpp/hexadecimal/.exercism/: metadata.json
cpp/space-age/: CMakeLists.txt  README.md  local_history.patch  space_age.hpp  space_age_test.cpp
cpp/space-age/.exercism/: metadata.json
cpp/space-age/test/: catch.hpp
(+613 files in other folders)
